# SPBU_Teaching

MaxDateFinder/: CMakeLists.txt  file.txt
MaxDateFinder/src/: main.c
mk_samples/: append.ml  appendo.ml  dune  first_step.ml  helpers_fun.ml  helpers_rel.ml  sort.ml  sorto.ml
